--- a/historymaps/index.html
+++ b/historymaps/index.html
@@ -14,7 +14,7 @@ const data = {
 	map_y: 580,
 	year: -4000,
 	zoom: 1,
-	lang: 'ja',
+	lang: 'zh',
 };
 
 </script>
@@ -28,7 +28,7 @@ const data = {
 <script type="application/javascript" src="js/Region.js" defer></script>
 <script type="application/javascript" src="js/Map.js" defer></script>
 <script type="application/javascript" src="js/twha.js" defer></script>
-<title>The World Historical Atras</title>
+<title>历史地图</title>
 </head>
 <body>
 <div id="head">
