--- a/downloads/index.html
+++ b/downloads/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-      <title>downloads</title>
+      <title>index</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
@@ -26,7 +26,7 @@
       
 <h1 id="下载站">下载站 </h1>
 <ul>
-<li><a href="https://wmx.lanzoul.com/i7vyD1sq8gfa">桌面课程表(1版)</a></li>
+<li><a href="https://mirror.ghproxy.com/?q=https%3A%2F%2Fgithub.com%2FEnderWolf006%2FElectronClassSchedule%2Freleases%2Fdownload%2Flatest%2FWin7_Win8_ElectronClassSchedule.zip">桌面课程表(0版)</a></li>
 </ul>
 
       </div>
