--- a/uploads/index.html
+++ b/uploads/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>文件上传</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>文件上传</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>文件上传</h1>
-  <form enctype="multipart/form-data" method="post" action="upload.php">
-    <input type="file" name="file">
-    <input type="submit" value="上传">
-  </form>
+    <div class="container">
+        <h1>上传文件</h1>
+        <form id="uploadForm" enctype="multipart/form-data">
+            <input type="file" id="fileInput" name="file">
+            <button type="submit">上传</button>
+        </form>
+        <div id="message"></div>
+    </div>
+    <script src="upload.js"></script>
 </body>
 </html>
